[gd_scene load_steps=2 format=3 uid="uid://gfjvd358j1j5"]

[ext_resource type="Script" path="res://addons/TweenSuite/TweenAnimationEditor/TweenAnimationEditor.gd" id="1_r8si7"]

[node name="TweenAnimationEditor" type="VBoxContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_r8si7")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Root"

[node name="RootPath" type="LineEdit" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="StepContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 50

[node name="AddStep" type="Button" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Add Step"

[connection signal="pressed" from="MarginContainer/AddStep" to="." method="add_animation_step"]
